--- a/configs/app_config.yml
+++ b/configs/app_config.yml
@@ -8,7 +8,7 @@ directories:
 embedding_model_config:
   engine: "text-embedding-ada-002"
 
-llm_congfig:
+llm_config:
   llm_system_role: "You Are a chatbot. You'll receive a prompt that includes a chat history , retrieved content from the vectorDB based on the user's question, and the source.\
    your task is to respond to the user's new question using the information from the vectorDB without relying on your own knowledge.\
    you will receive a prompt with the following format: 
