Tested the q&a on vector db

--- a/configs/app_config.yml
+++ b/configs/app_config.yml
@@ -1,6 +1,6 @@
 directories:
   data_directory: data/docs
-  data_directory: data/docs_2
+  data_directory_2: data/docs_2
   persist_directory: data/vectordb/processed/chroma
   custom_persist_directory: data/vectordb/uploaded/chroma
 
